# playground-pattern

./: .gitignore  CMakeLists.txt  README.md
scripts/: build.sh  check.sh  load.sh  play.sh  run.sh  test.sh
src/: main.cc
template/: cquery.cc  cquery.fallback.cc
